--- a/package.json
+++ b/package.json
@@ -6,19 +6,46 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean:db": "rm -rf ./prisma/migrations && rm -rf ./prisma/dev.db",
+    "init:db": "npx prisma migrate dev --name init",
+    "init": "npm run clean:db && npm run init:db",
+    "clean:next": "rm -rf ./.next",
+    "seed": "npx prisma db seed",
+    "studio": "npx prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^5.4.2",
+    "clsx": "^2.0.0",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
+    "sass": "^1.69.1",
+    "swiper": "^10.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
+    "@types/uuid": "^9.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.4",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "next-auth": "^4.23.2",
+    "prisma": "^5.4.2",
+    "supabase": "^1.100.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
