--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-player": "^2.13.0",
     "react-toastify": "^9.1.3",
-    "react-youtube": "^10.1.0",
     "sass": "^1.69.1",
     "swiper": "^10.3.1",
     "uuid": "^9.0.1"
