--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-player": "^2.13.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.1",
+    "sharp": "^0.32.6",
     "swiper": "^10.3.1",
     "uuid": "^9.0.1"
   },
