--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "next": "13.5.4",
     "react": "^18",
