--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "push": "npx prisma db push"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
