--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^5.5.2",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "copy-to-clipboard": "^3.3.3",
     "lodash": "^4.17.21",
     "next": "13.5.4",
     "react": "^18",
